{
    "name": "Touch",
    "maps": [
        {
            "name": "FireControll",
            "id": "00169aa5-5f59-42ec-b4f8-534efa4fa6bf",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "f0800e5f-2bcf-41cd-b1d5-190929462934",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "9e466764-5e62-4ae0-991b-9fd45a3f51bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4b11df4-f260-4bd4-8a1d-90896bd4fb42",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouch",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66f2b6d6-2953-4ad4-8f58-06c0660b4374",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7874fdf-7225-48fc-99e6-91a3a7ee8ca2",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouch",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "807759d4-ddb6-42a1-a787-7c27bf01f72a",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MobileTouch",
            "bindingGroup": "MobileTouch",
            "devices": []
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}